# WgpuVoxelRenderer

./: .gitignore  Cargo.toml  README.md  todo.md
assets/models/: cact1.vox  cact2.vox  tree1.vox  tree2.vox
src/: apphandler.rs  cam.rs  input.rs  main.rs  mainstate.rs  map.rs  screen.rs  vects.rs
src/shaders/: main.wgsl  main.wgsl.bak  render.spv  render.wgsl  tile.wgsl  voxelise.wgsl
