[package]
name = "voxelgpu"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.23.0"
dot_vox = "5.1.1"
egui = "0.31.1"
egui-wgpu = "0.31.1"
egui-winit = "0.31.1"
env_logger = "0.11.8"
pollster = "0.4.0"
quaternion = "2.0.0"
rand = "0.9.1"
tokio = {version = "1.45.0", features = ["full"]}
wgpu = "24.0.5"
winit = "0.30.11"
